main/default/objects/Pricing_Agreement_Product__c/Pricing_Agreement_Product__c.object-meta.xml
<CustomObject>
    <label>Pricing Agreement Product</label>
    <nameField>
        <displayFormat>PAD-{00000000}</displayFormat>
        <label>Pricing Agreement Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Agreement Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>