main/default/objects/Pricing_Agreement_Product__c/fields/MRC_2__c.field-meta.xml
<CustomField>
    <fullName>MRC_2__c</fullName>
    <label>MRC 2year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>