main/default/objects/Pricing_Agreement_Product__c/fields/NRC_1__c.field-meta.xml
<CustomField>
    <fullName>NRC_1__c</fullName>
    <label>NRC 1year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>