main/default/objects/Pricing_Agreement_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated Internet EoTDM 1.5 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoTDM 3 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoTDM 4.5 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoTDM 6 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoTDM 7.5 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoTDM 9 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoTDM 10.5 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoTDM 12 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 5 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 10 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 15 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 20 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 30 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 40 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 45 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 50 Mbps</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet EoC 60 Mbps</fullName>
            </value>
            <value>
                <fullName>Voice T1 ISDN/PRI (Loop &amp; Trunks)</fullName>
            </value>
            <value>
                <fullName>EEL Surcharge</fullName>
            </value>
            <value>
                <fullName>SIP Business Line</fullName>
            </value>
            <value>
                <fullName>SIP  ISDN PRI Channel</fullName>
            </value>
            <value>
                <fullName>Native SIP Trunking Sessions</fullName>
            </value>
            <value>
                <fullName>IAD - Intergrated Access Devise</fullName>
            </value>
            <value>
                <fullName>DID Numbers</fullName>
            </value>
            <value>
                <fullName>Remote Location Service</fullName>
            </value>
            <value>
                <fullName>Market Expansion DID Service</fullName>
            </value>
            <value>
                <fullName>Feature Package Plus</fullName>
            </value>
            <value>
                <fullName>Caller ID Name &amp; Number</fullName>
            </value>
            <value>
                <fullName>LD and Feature Package 2,000</fullName>
            </value>
            <value>
                <fullName>LD and Feature Package 5,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>