main/default/objects/Pricing_Agreement_Product__c/validationRules/No_changes_Allowed_for_Approved_PA.validationRule-meta.xml
<ValidationRule>
    <fullName>No_changes_Allowed_for_Approved_PA</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Pricing_Agreement__r.Approval_Status__c , &#39;Approved&#39;)</errorConditionFormula>
    <errorMessage>No changes are allowed for the Approved Pricing Agreement.</errorMessage>
</ValidationRule>